tests/invalid_ast_samples/f74405488bd9786f83afb55c357ab2589c64db9a19984eab3d6c99de2700e511.py
from ast import arguments
from ast import AsyncFunctionDef
from ast import Continue
from ast import Module

tree = Module(
    body=[
        AsyncFunctionDef(
            name="name_2",
            args=arguments(
                posonlyargs=[], args=[], kwonlyargs=[], kw_defaults=[], defaults=[]
            ),
            body=[Continue()],
            decorator_list=[],
            type_params=[],
        )
    ],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# async def name_2():
#     continue
#
#
# Error:
#     SyntaxError("'continue' not properly in loop", ('<file>', 2, 5, None, 2, 13))
